fix: overflowing word in solver infos section , issue detail page

--- a/src/sass/abstracts/_mixin.scss
+++ b/src/sass/abstracts/_mixin.scss
@@ -26,13 +26,18 @@
 
 @mixin tableView_property() {
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   align-items: center;
   text-align: center;
   label {
     color: $main-color;
     font-weight: bold;
     width: 30%;
+    text-align: start;
+  }
+  p{
+    text-align: start;
+    word-wrap: break-word;
   }
 }
 //used to add effect to the dropdowns default css
